--- a/conda/env/yml/pcgr.yml
+++ b/conda/env/yml/pcgr.yml
@@ -9,14 +9,13 @@ channels:
 
 dependencies:
   - pcgr ==1.4.2 # versioned by bump2version
-  - bedtools ==2.30.0
-  - bcftools ==1.10.2
-  - cyvcf2 ==0.30.11
-  - ensembl-vep ==105.0
-  - htslib ==1.10.2
-  - pandoc ==2.16
-  - perl-bio-bigfile ==1.07
-  - vcfanno ==0.3.3
+  - bedtools
+  - bcftools
+  - cyvcf2
+  - bioconda::ensembl-vep ==109.3
+  - htslib
+  - pandoc
+  - vcfanno
   - vt
-  - vcf2maf ==1.6.21
+  - umccr::vcf2maf ==1.6.21.20230511
   - bioconda::vcf2tsvpy ==0.6.1
