--- a/conda/recipe/pcgr/meta.yaml
+++ b/conda/recipe/pcgr/meta.yaml
@@ -16,9 +16,9 @@ requirements:
     - curl
     - unzip
     - tar
-    - python ==3.10
+    - python
   run:
-    - python ==3.10
+    - python
     - pandas
     - scipy
     - pip
