--- a/.github/workflows/build_conda_recipes.yaml
+++ b/.github/workflows/build_conda_recipes.yaml
@@ -3,7 +3,6 @@ name: deploy
 on:
   push:
     branches:
-      - master
       - conda_update_pd1
 env:
   atoken: ${{ secrets.ANACONDA_UPLOAD_TOKEN }}
@@ -12,18 +11,14 @@ env:
   env_lock_path: conda/env/lock
   VERSION: '1.4.4' # versioned by bump2version
 jobs:
-  build_conda_pkgs:
+  build_pcgrr_conda_pkg:
     # When merging to one of the branches above and the commit message matches
     if: "startsWith(github.event.head_commit.message, 'Bump version:')"
-    name: Build conda packages
+    name: Build pcgrr conda pkg
     runs-on: ubuntu-latest
     defaults:
       run:
         shell: bash -l {0}
-    strategy:
-      matrix:
-        pyversion: ["3.9", "3.10"]
-
     steps:
       - name: Code checkout
         uses: actions/checkout@v3
@@ -39,50 +34,72 @@ jobs:
           use-mamba: true
       - name: 🐍 Conda pkg build and upload
         run: |
-          conda mambabuild ${recipe_path}/pcgr --python=${{ matrix.pyversion }} -c conda-forge -c bioconda --token ${atoken} --quiet
           conda mambabuild ${recipe_path}/pcgrr -c conda-forge -c bioconda --token ${atoken} --quiet
+  build_pcgr_conda_pkg:
+    # When merging to one of the branches above and the commit message matches
+    if: "startsWith(github.event.head_commit.message, 'Bump version:')"
+    name: Build pcgr conda pkg
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        shell: bash -l {0}
+    steps:
+      - name: Code checkout
+        uses: actions/checkout@v3
+      - name: Mambaforge setup
+        uses: conda-incubator/setup-miniconda@v2
+        with:
+          miniforge-variant: Mambaforge
+          miniforge-version: "latest"
+          show-channel-urls: true
+          auto-activate-base: false
+          activate-environment: condabuild
+          environment-file: ${{ env.env_yml_path }}/condabuild.yml
+          use-mamba: true
+      - name: 🐍 Conda pkg build and upload
+        run: |
+          conda mambabuild ${recipe_path}/pcgr -c conda-forge -c bioconda --token ${atoken} --quiet
 
   # spin up fresh instance since conda-lock takes ages when run on previous one
-# conda_lock:
-#   name: Conda lock
-#   runs-on: ubuntu-latest
-#   needs: build_conda_pkgs
-#   defaults:
-#     run:
-#       shell: bash -l {0}
-
-#   steps:
-#     - name: Code checkout
-#       uses: actions/checkout@v3
-#     - name: Mambaforge setup
-#       uses: conda-incubator/setup-miniconda@v2
-#       with:
-#         miniforge-variant: Mambaforge
-#         miniforge-version: "latest"
-#         show-channel-urls: true
-#         auto-activate-base: false
-#         activate-environment: condabuild
-#         environment-file: ${{ env.env_yml_path }}/condabuild.yml
-#         use-mamba: true
-#     - name: Generate conda locks
-#       run: |
-#         # 1. generate a combined lock file
-#         # 2. render platform-specific locks
-#         conda-lock lock --file ${env_yml_path}/pcgr.yml -p osx-64 -p linux-64
-#         conda-lock render --kind explicit -p osx-64 -p linux-64 conda-lock.yml --filename-template 'pcgr-{platform}.lock' && rm conda-lock.yml
-#         conda-lock lock --file ${env_yml_path}/pcgrr.yml -p osx-64 -p linux-64
-#         conda-lock render --kind explicit -p osx-64 -p linux-64 conda-lock.yml --filename-template 'pcgrr-{platform}.lock' && rm conda-lock.yml
-#         mv pcgrr-*.lock ${env_lock_path}
-#         mv pcgr-*.lock ${env_lock_path}
-#     - name: Commit changes
-#       run: |
-#         git status
-#         git config --local user.email "actions@github.com"
-#         git config --local user.name "GitHub Actions"
-#         MSG="[bot] Updating conda-lock files (v${VERSION})"
-#         git add .
-#         git commit -m "${MSG}"
-#         git push
+  conda_lock:
+    name: Conda lock
+    runs-on: ubuntu-latest
+    needs: [build_pcgr_conda_pkg, build_pcgrr_conda_pkg]
+    defaults:
+      run:
+        shell: bash -l {0}
+    steps:
+      - name: Code checkout
+        uses: actions/checkout@v3
+      - name: Mambaforge setup
+        uses: conda-incubator/setup-miniconda@v2
+        with:
+          miniforge-variant: Mambaforge
+          miniforge-version: "latest"
+          show-channel-urls: true
+          auto-activate-base: false
+          activate-environment: condabuild
+          environment-file: ${{ env.env_yml_path }}/condabuild.yml
+          use-mamba: true
+      - name: Generate conda locks
+        run: |
+          # 1. generate a combined lock file
+          # 2. render platform-specific locks
+          conda-lock lock --file ${env_yml_path}/pcgr.yml -p osx-64 -p linux-64
+          conda-lock render --kind explicit -p osx-64 -p linux-64 conda-lock.yml --filename-template 'pcgr-{platform}.lock' && rm conda-lock.yml
+          conda-lock lock --file ${env_yml_path}/pcgrr.yml -p osx-64 -p linux-64
+          conda-lock render --kind explicit -p osx-64 -p linux-64 conda-lock.yml --filename-template 'pcgrr-{platform}.lock' && rm conda-lock.yml
+          mv pcgrr-*.lock ${env_lock_path}
+          mv pcgr-*.lock ${env_lock_path}
+      - name: Commit changes
+        run: |
+          git status
+          git config --local user.email "actions@github.com"
+          git config --local user.name "GitHub Actions"
+          MSG="[bot] Updating conda-lock files (v${VERSION})"
+          git add .
+          git commit -m "${MSG}"
+          git push
 #     - name: 🌐 Website publish
 #       run: |
 #         mamba activate
