--- a/conda/env/yml/pcgr.yml
+++ b/conda/env/yml/pcgr.yml
@@ -12,10 +12,10 @@ dependencies:
   - bedtools
   - bcftools
   - cyvcf2
-  - bioconda::ensembl-vep ==109.3
+  - bioconda::ensembl-vep ==110.1
   - htslib
   - pandoc
   - vcfanno
   - vt
-  - umccr::vcf2maf ==1.6.21.20230511
+  - bioconda::vcf2maf-umccr ==1.6.21.20230511
   - bioconda::vcf2tsvpy ==0.6.1
