--- a/pcgrr/DESCRIPTION
+++ b/pcgrr/DESCRIPTION
@@ -23,6 +23,8 @@ Description: Functions, tools and utilities for the generation of clinical cance
     it should thus not be used as a stand-alone package.
 License: MIT + file LICENSE
 biocViews:
+Remotes:
+    sigven/cpsr
 Imports:
     assertable,
     assertthat,
@@ -30,6 +32,7 @@ Imports:
     BiocManager,
     Biostrings,
     caret,
+    cpsr,
     data.table,
     DT,
     dplyr,
@@ -68,5 +71,5 @@ Suggests:
     BSgenome.Hsapiens.UCSC.hg38
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.2.2
+RoxygenNote: 7.2.3
 Roxygen: list(markdown = TRUE)
