new pipe operator and input handling

--- a/pcgrr/NAMESPACE
+++ b/pcgrr/NAMESPACE
@@ -22,14 +22,11 @@ export(cosmic_somatic_status)
 export(dbsnp_germline_status)
 export(deduplicate_eitems)
 export(detect_vcf_sample_name)
-export(determine_genotype)
 export(df_string_replace)
 export(filter_eitems_by_site)
 export(filter_read_support)
 export(generate_annotation_link)
 export(generate_pcgr_report)
-export(generate_report_data_cna)
-export(generate_report_data_cna2)
 export(generate_report_data_kataegis)
 export(generate_report_data_msi)
 export(generate_report_data_rainfall)
@@ -67,8 +64,8 @@ export(init_var_content)
 export(kataegis_detect)
 export(kataegis_input)
 export(load_all_eitems)
+export(load_dna_variants)
 export(load_eitems)
-export(load_germline_snv_indel)
 export(load_reference_data)
 export(load_somatic_cna)
 export(load_somatic_snv_indel)
@@ -79,7 +76,6 @@ export(log4r_info)
 export(log4r_warn)
 export(log_var_eitem_stats)
 export(make_upset_plot_data)
-export(match_eitems_to_var)
 export(max_af_gnomad)
 export(msi_indel_fraction_plot)
 export(order_variants)
@@ -98,7 +94,6 @@ export(tier_af_distribution)
 export(update_report)
 export(upset_plot_tumor_only)
 export(variant_stats_report)
-export(virtual_panel_display_html)
 export(write_processed_vcf)
 export(write_report_output)
 importFrom(rlang,":=")
