--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -2,6 +2,10 @@
 current_version = 1.4.1
 commit = True
 tag = False
+parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\.(?P<dev>\d+))?
+serialize = 
+	{major}.{minor}.{patch}.{dev}
+	{major}.{minor}.{patch}
 
 [bumpversion:file:pcgrr/DESCRIPTION]
 search = Version: {current_version}
