conda: add numpy/pybedtools/cyvcf2/pyyaml to recipe itself

--- a/conda/recipe/pcgr/meta.yaml
+++ b/conda/recipe/pcgr/meta.yaml
@@ -21,7 +21,11 @@ requirements:
     - python
     - pandas
     - scipy
+    - numpy
     - pip
+    - pybedtools
+    - cyvcf2
+    - pyyaml
 
 test:
   commands:
