use perl-compress-raw-zlib from conda-forge

--- a/conda/env/yml/pcgr.yml
+++ b/conda/env/yml/pcgr.yml
@@ -13,6 +13,7 @@ dependencies:
   - ensembl-vep ==110.1
   - htslib
   - pandoc
+  - conda-forge::perl-compress-raw-zlib
   - pybedtools
   - vcfanno
   - vt
