fix CSQ patterns and biomarker retrieval

--- a/pcgrr/NAMESPACE
+++ b/pcgrr/NAMESPACE
@@ -23,6 +23,7 @@ export(dbsnp_germline_status)
 export(deduplicate_eitems)
 export(detect_vcf_sample_name)
 export(df_string_replace)
+export(expand_biomarker_items)
 export(filter_eitems_by_site)
 export(filter_read_support)
 export(generate_annotation_link)
