simplified tier assignment

--- a/pcgrr/NAMESPACE
+++ b/pcgrr/NAMESPACE
@@ -9,6 +9,7 @@ export(append_gwas_citation_phenotype)
 export(append_otargets_pheno_link)
 export(append_tcga_var_link)
 export(append_tfbs_annotation)
+export(assign_acmg_tiers)
 export(assign_germline_popfreq_status)
 export(assign_mutation_type)
 export(assign_somatic_classification)
@@ -28,11 +29,13 @@ export(filter_eitems_by_site)
 export(filter_read_support)
 export(generate_annotation_link)
 export(generate_pcgr_report)
+export(generate_pcgr_report2)
 export(generate_report_data_kataegis)
 export(generate_report_data_msi)
 export(generate_report_data_rainfall)
 export(generate_report_data_signatures_mp)
 export(generate_report_data_snv_indel)
+export(generate_report_data_snv_indel2)
 export(generate_report_data_tmb)
 export(generate_report_data_trials)
 export(generate_report_data_tumor_only)
@@ -45,15 +48,15 @@ export(get_cna_overlapping_transcripts)
 export(get_genome_obj)
 export(get_oncogene_tsgene_target_sets)
 export(get_ordinary_chromosomes)
-export(get_population_tag)
 export(get_prevalent_site_signatures)
-export(get_proper_maf_alleles)
 export(get_valid_chromosomes)
 export(het_af_germline_status)
 export(hom_af_status)
 export(init_cna_content)
 export(init_germline_content)
+export(init_kataegis_content)
 export(init_m_signature_content)
+export(init_msi_content)
 export(init_rainfall_content)
 export(init_report)
 export(init_report_display_content)
