--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -19,9 +19,9 @@ replace = {new_version}
 search = __version__ = '{current_version}'
 replace = __version__ = '{new_version}'
 
-[bumpversion:file:setup.py]
-search = version='{current_version}'
-replace = version='{new_version}'
+[bumpversion:file:pyproject.toml]
+search = version = "{current_version}"
+replace = version = "{new_version}"
 
 [bumpversion:file:conda/recipe/pcgrr/meta.yaml]
 search = version: {current_version}
