--- a/pcgrr/NAMESPACE
+++ b/pcgrr/NAMESPACE
@@ -5,8 +5,6 @@ export(append_cancer_gene_evidence)
 export(append_dbmts_var_link)
 export(append_dbnsfp_var_link)
 export(append_drug_var_link)
-export(append_gwas_citation_phenotype)
-export(append_otargets_pheno_link)
 export(append_tcga_var_link)
 export(append_tfbs_annotation)
 export(assign_acmg_tiers)
@@ -14,8 +12,6 @@ export(assign_germline_popfreq_status)
 export(assign_mutation_type)
 export(assign_somatic_classification)
 export(assign_somatic_germline_evidence)
-export(assign_tier1_tier2_acmg)
-export(assign_tier1_tier2_acmg_cna)
 export(check_common_colnames)
 export(check_file_exists)
 export(clinvar_germline_status)
@@ -29,30 +25,23 @@ export(filter_eitems_by_site)
 export(filter_read_support)
 export(generate_annotation_link)
 export(generate_pcgr_report)
-export(generate_pcgr_report2)
 export(generate_report_data_kataegis)
 export(generate_report_data_msi)
 export(generate_report_data_rainfall)
-export(generate_report_data_signatures_mp)
-export(generate_report_data_snv_indel)
-export(generate_report_data_snv_indel2)
+export(generate_report_data_signatures)
 export(generate_report_data_tmb)
 export(generate_report_data_trials)
-export(generate_report_data_tumor_only)
 export(generate_report_data_value_box)
 export(generate_tier_tsv)
-export(get_calls)
 export(get_clin_assocs_cna)
 export(get_clin_assocs_snv_indel)
-export(get_cna_overlapping_transcripts)
 export(get_genome_obj)
-export(get_oncogene_tsgene_target_sets)
 export(get_ordinary_chromosomes)
 export(get_prevalent_site_signatures)
 export(get_valid_chromosomes)
 export(het_af_germline_status)
 export(hom_af_status)
-export(init_cna_content)
+export(init_cna_vstats)
 export(init_germline_content)
 export(init_kataegis_content)
 export(init_m_signature_content)
@@ -60,7 +49,7 @@ export(init_msi_content)
 export(init_rainfall_content)
 export(init_report)
 export(init_report_display_content)
-export(init_snv_indel_content)
+export(init_snv_indel_vstats)
 export(init_tmb_content)
 export(init_tumor_only_content)
 export(init_valuebox_content)
@@ -79,7 +68,7 @@ export(log4r_fatal)
 export(log4r_info)
 export(log4r_warn)
 export(log_var_eitem_stats)
-export(make_upset_plot_data)
+export(make_cnaqc_object)
 export(max_af_gnomad)
 export(msi_indel_fraction_plot)
 export(order_variants)
@@ -91,12 +80,9 @@ export(qc_var_eitems)
 export(remove_cols_from_df)
 export(sort_chromosomal_segments)
 export(structure_var_eitems)
-export(targeted_drugs_pr_ttype)
-export(targeted_drugs_summarise)
 export(tcga_somatic_status)
 export(tier_af_distribution)
 export(update_report)
-export(upset_plot_tumor_only)
 export(variant_stats_report)
 export(write_processed_vcf)
 export(write_report_output)
