expression update and bug fixes

--- a/pcgrr/NAMESPACE
+++ b/pcgrr/NAMESPACE
@@ -74,6 +74,7 @@ export(log_var_eitem_stats)
 export(make_cnaqc_object)
 export(max_af_gnomad)
 export(msi_indel_fraction_plot)
+export(msi_indel_load_plot)
 export(order_variants)
 export(plot_tmb_primary_site_tcga)
 export(plot_value_boxes)
