--- a/pcgrr/DESCRIPTION
+++ b/pcgrr/DESCRIPTION
@@ -24,30 +24,31 @@ Description: Functions, tools and utilities for the generation of clinical
     used as a stand-alone package.
 License: MIT + file LICENSE
 biocViews:
+Remotes:
+    sigven/cpsr,
+    caravagnalab/CNAqc
 Imports:
     openxlsx2,
     quantiseqr,
     yaml,
     assertable,
     assertthat,
-    BiocGenerics,
     Biostrings,
-    caret,
+    CNAqc,
+    cpsr,
     DT,
     dplyr,
     flexdashboard,
     GenomeInfoDb,
     ggplot2,
-    ggpubr,
     glue,
     htmltools,
-    IRanges,
     jsonlite,
     log4r,
     MutationalPatterns,
     plotly,
     quarto,
-    randomForest,
+    readr,
     reshape2,
     rlang,
     rmarkdown,
@@ -56,8 +57,8 @@ Imports:
     formattable,
     scales,
     stringr,
-    tidyr,
-    usethis
+    stringi,
+    tidyr
 Depends:
     R (>= 4.0)
 Suggests:
