--- a/pcgrr/NAMESPACE
+++ b/pcgrr/NAMESPACE
@@ -76,6 +76,7 @@ export(log4r_warn)
 export(log_var_eitem_stats)
 export(make_cnaqc_object)
 export(max_af_gnomad)
+export(mkdir)
 export(msi_indel_fraction_plot)
 export(msi_indel_load_plot)
 export(order_variants)
@@ -92,7 +93,6 @@ export(tier_af_distribution)
 export(update_report)
 export(variant_stats_report)
 export(write_processed_vcf)
-export(write_report)
 export(write_report_excel)
 export(write_report_quarto_html)
 export(write_report_tsv)
