--- a/.github/workflows/build_conda_recipes.yaml
+++ b/.github/workflows/build_conda_recipes.yaml
@@ -11,7 +11,7 @@ env:
   recipe_path: conda/recipe
   env_yml_path: conda/env/yml
   env_lock_path: conda/env/lock
-  VERSION: '1.4.1.9003' # versioned by bump2version
+  VERSION: '1.4.1.9004' # versioned by bump2version
 jobs:
   build_pcgrr_conda_pkg:
     # When merging to one of the branches above and the commit message matches
@@ -31,6 +31,7 @@ jobs:
       - name: 🐍 Conda pkg build and upload
         run: |
           conda mambabuild ${recipe_path}/pcgrr -c conda-forge -c bioconda --token ${atoken}
+
   build_pcgr_conda_pkg:
     # When merging to one of the branches above and the commit message matches
     if: "startsWith(github.event.head_commit.message, 'Bump version:')"
@@ -91,7 +92,7 @@ jobs:
           cp pcgrr/DESCRIPTION . # hack for pkgdown to work
           printf "pcgrr version:\n"
           Rscript -e "packageVersion('pcgrr')"
-          Rscript -e "pkgdown::deploy_to_branch(pkg = 'pcgrr', commit_message = 'Built PCGR website - see https://sigven.github.io/pcgr/', branch = 'gh-pages', new_process = FALSE)"
+          Rscript -e "pkgdown::deploy_to_branch(pkg = 'pcgrr', commit_message = 'Built PCGR website: https://sigven.github.io/pcgr/', branch = 'gh-pages', new_process = FALSE)"
 
   docker_deploy:
     name: Build and deploy Docker
