--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -23,6 +23,10 @@ replace = __version__ = '{new_version}'
 search = version = "{current_version}"
 replace = version = "{new_version}"
 
+[bumpversion:file:conda/recipe/pcgr/meta.yaml]
+search = version: {current_version}
+replace = version: {new_version}
+
 [bumpversion:file:conda/recipe/pcgrr/meta.yaml]
 search = version: {current_version}
 replace = version: {new_version}
