--- a/conda/recipe/pcgr/meta.yaml
+++ b/conda/recipe/pcgr/meta.yaml
@@ -1,8 +1,6 @@
-{% set data = load_setup_py_data() %}
-
 package:
   name: pcgr
-  version: {{ data.get('version') }}
+  version: 1.4.1.9004 # versioned by bump2version
 
 source:
   path: ../../..
@@ -32,6 +30,6 @@ test:
     - pcgr --version
 
 about:
-  home: {{ data.get('url') }}
-  license: {{ data.get('license') }}
-  summary: {{ data.get('description') }}
+  home: https://github.com/sigven/pcgr
+  license: MIT
+  summary: Personal Cancer Genome Reporter (PCGR) - variant interpretation for precision cancer medicine.
