minor bugs - allelic support plot, more safe Excel sheet generation

--- a/pcgrr/NAMESPACE
+++ b/pcgrr/NAMESPACE
@@ -38,6 +38,7 @@ export(generate_report_data_tmb)
 export(generate_report_data_trials)
 export(generate_tier_tsv)
 export(get_clin_assocs_cna)
+export(get_dt_tables)
 export(get_excel_sheets)
 export(get_genome_obj)
 export(get_ordinary_chromosomes)
@@ -87,6 +88,7 @@ export(predict_msi_status)
 export(qc_var_eitems)
 export(remove_cols_from_df)
 export(sort_chromosomal_segments)
+export(strip_html)
 export(structure_var_eitems)
 export(tcga_somatic_status)
 export(tier_af_distribution)
