export strtip_html

--- a/pcgrr/NAMESPACE
+++ b/pcgrr/NAMESPACE
@@ -87,6 +87,7 @@ export(predict_msi_status)
 export(qc_var_eitems)
 export(remove_cols_from_df)
 export(sort_chromosomal_segments)
+export(strip_html)
 export(structure_var_eitems)
 export(tcga_somatic_status)
 export(tier_af_distribution)
