caret required for stats::predict

--- a/conda/recipe/pcgrr/meta.yaml
+++ b/conda/recipe/pcgrr/meta.yaml
@@ -20,6 +20,7 @@ requirements:
     - r-assertable
     - r-assertthat
     - bioconductor-biostrings
+    - r-caret
     - r-dplyr
     - r-dt
     - r-formattable
@@ -50,6 +51,7 @@ requirements:
     - r-assertable
     - r-assertthat
     - bioconductor-biostrings
+    - r-caret
     - r-dplyr
     - r-dt
     - r-formattable
