upload SIF artifact

--- a/.github/workflows/apptainer.yaml
+++ b/.github/workflows/apptainer.yaml
@@ -51,5 +51,11 @@ jobs:
         run: |
           docker image ls -a
           docker save sigven/pcgr:${VERSION} -o pcgr_${VERSION}.tar
+          ls -la
+          df -h
           apptainer build pcgr_${VERSION}.sif docker-archive://pcgr_${VERSION}.tar
-          apptainer push pcgr_${VERSION}.sif oras://ghcr.io/${GITHUB_REPOSITORY}:${VERSION}
+      - name: Upload SIF
+        uses: actions/upload-artifact@v4
+        with:
+          name: pcgr_${{ env.VERSION }} Singularity Image File
+          path: ./pcgr_${{ env.VERSION }}.sif
